Basic layout for record page.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,21 +1,13 @@
 doctype html
 html
-head
-  title= `${title} | ${siteName}`
-  meta(name="viewport" content="width=device-width, initial-scale=1")
-body
+  head
+    title=`${title} | ${siteName}`
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+  body
 
-  block header
-    header
-      h1 Here's the header.
-      nav
-        a(href='/') navItem
-        a(href='/') navItem
-        a(href='/') navItem
+    block header
+      header
+        h1 Here's the default header.
 
-  block content
-    h2 This is the content.
-
-  block footer
-    footer
-      p Here's a footer.
+    block content
+      h2 This is the default content.
