--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
 
     block header
       header
-        h1 Here's the default header.
+        h1 Overwatch Stat Tracker
 
     block content
       h2 This is the default content.
