--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,11 @@
-h1 {
-  color: gray; }
+html {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
+
+.hero-select {
+  display: flex;
+  flex-flow: row wrap; }
+  .hero-select button {
+    flex: 0 1 33.3333%;
+    padding: 1rem;
+    border-radius: 0;
+    -webkit-appearance: none; }
