--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,13 @@ html {
     padding: 1rem;
     border-radius: 0;
     -webkit-appearance: none; }
+
+.hero-select__button {
+  padding: 1rem;
+  margin-right: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 0;
+  -webkit-appearance: none; }
+  .hero-select__button label {
+    display: inline-block;
+    margin-right: .5rem; }
