--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,3 +13,15 @@ html{
         -webkit-appearance: none;
     }
 }
+.hero-select__button{
+    padding: 1rem;
+    margin-right: 1rem;
+    border: 1px solid rgba(0,0,0,.5);
+    border-radius: 0;
+    -webkit-appearance: none;
+    
+    label{
+        display: inline-block;
+        margin-right: .5rem;
+    }
+}
