--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,13 +5,7 @@ html{
 .hero-select{
     display: flex;
     flex-flow: row wrap;
-
-    button{
-        flex: 0 1 33.3333%;
-        padding: 1rem;
-        border-radius: 0;
-        -webkit-appearance: none;
-    }
+    margin-bottom :1rem;
 }
 .hero-select__button{
     padding: 1rem;
@@ -24,4 +18,10 @@ html{
         display: inline-block;
         margin-right: .5rem;
     }
+}
+
+button{
+    padding: .25rem 1rem;
+    border: 1px solid rgba(0,0,0,.3);
+    -webkit-appearance: none;
 }
