--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,21 @@ html{
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+h1{
+    margin-top: 0;
+}
+
+nav{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    margin-bottom: 1rem;
+
+    a{
+        padding: 0 .5rem 0 0;
+    }
+}
+
 .hero-select{
     display: flex;
     flex-flow: row wrap;
