--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,13 @@ html
     title=`${title} | ${siteName}`
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href='/css/style.css')
+
   body
+
+    block nav
+      nav
+        a(href='/') Home
+        a(href='/record') Record
 
     block header
       header
