--- a/views/record.pug
+++ b/views/record.pug
@@ -7,7 +7,7 @@ block content
   //-   input(type="text" name="name" id="name")
   //-   input(type="submit" value="Save →" class="button")
 
-  form(action='/save' method='GET')
+  form(action='/record' method='POST')
     .hero-select
       .hero-select__button
         label(for='ana') Ana
